Visual tweaks from haz.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <!-- New Google Fonts for Title and Buttons (Bangers for title) -->
     <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Bebas+Neue&display=swap" rel="stylesheet">
-    
+    <!-- Jersey 24 Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Jersey+15&display=swap" rel="stylesheet">
+    <!-- Rubik Glitch Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Glitch&display=swap" rel="stylesheet">
+
     <!-- Link to external CSS files -->
     <link href="style.css" rel="stylesheet">
     <link href="glitch.css" rel="stylesheet">
@@ -70,6 +74,7 @@
 
             <!-- Copyright Footer -->
             <footer>
+                <div id="dvdLogo"></div>
                 <p class="copyright-text">&copy; 2025 BROTHER BROTHER. ALL RIGHTS RESERVED.</p>
             </footer>
         </div>
