--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Jersey+15&display=swap" rel="stylesheet">
     <!-- Rubik Glitch Font -->
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Glitch&display=swap" rel="stylesheet">
+    <!-- Bowlby One SC Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Bowlby+One+SC&display=swap" rel="stylesheet">
+    <!-- Rubik Dirt Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Dirt&display=swap" rel="stylesheet">
 
     <!-- Link to external CSS files -->
     <link href="style.css" rel="stylesheet">
