added loading screen

--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
     <link href="glitch.css" rel="stylesheet">
 </head>
 <body>
+    <!-- New: Loading Overlay -->
+    <div id="loadingOverlay">
+        <div class="loader-content">
+            <div class="loader-spinner"></div>
+            <p>LOADING...</p>
+        </div>
+    </div>
+
     <!-- Full-screen looping muted video background using Vimeo iframe -->
     <iframe
         id="mainBackgroundVideo"
@@ -158,7 +166,7 @@
 
     <!-- Telepathy Message Display (NEW) -->
     <div id="telepathyMessage" class="telepathy-message">
-        <p>A faint message echoes in your mind: "We hear you, mortal. Seek us in the void."</p>
+        <p>A faint message echoes in your mind: "We hear you, mortal. Seek us in the void."</p><br>
         <p>You will hear from the brothers in the next couple of days.</p>
     </div>
 
