refactored js into modular files

--- a/index.html
+++ b/index.html
@@ -188,6 +188,6 @@
     </div>
 
     <!-- Link to external JavaScript file -->
-    <script src="script.js"></script>
+    <script type="module" src="js/main.js"></script>
 </body>
 </html>
