added basic passcode input

--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
     <link href="glitch.css" rel="stylesheet">
 </head>
 <body>
+    <!-- NEW: Password Screen -->
+    <div id="passwordScreen">
+        <form id="passwordForm">
+            <!-- The label will be populated by the typewriter effect in JS -->
+            <label for="passcodeInput"></label>
+            <input type="text" id="passcodeInput" autocomplete="off" autofocus>
+        </form>
+    </div>
+
     <!-- SVG Filter for Wavy Displacement Effect -->
     <svg style="position: absolute; width: 0; height: 0; overflow: hidden;">
       <defs>
