fixed passcode url error

--- a/index.html
+++ b/index.html
@@ -159,8 +159,14 @@
         <main class="about-us-main">
             <div class="about-us-content">
                 <div class="about-us-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi.</p>
-                    <p>Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor.</p>
+                    <p>We are directing duo Yaz and Haz, brothers from Northern England (Buxton, to be exact), currently living in London and Amsterdam.
+                    <p>We make commercials and TV, mostly comic, heavily inspired by our 00s childhood. We came up through theatre, live comedy, video installations, and music videos.</p>
+                    <p>Our work is split, like us, between beautiful, human stories, and crack-pot, hair-brained comedy.</p>
+                    <p>We&rsquo;ve won a bunch of awards, but let&rsquo;s be honest who hasn&rsquo;t?</p>
+                    <p>Past clients range from Seat, Facebook, SumUp, Mastercard, and a few we can&rsquo;t tell you about.</p>
+                    <p>We take work in Commercials and Branded Content, at any stage of development. We can help you come up with that killer idea, or we can take your brief and run with it, raising it like it&rsquo;s our own baby.* So get in touch.</p>
+                    <p>If you think you need a director, in London, Berlin, Amsterdam, or really anywhere across Europe, we&rsquo;re here to convince you that you don&rsquo;t need a director. You need two.</p>
+                    
                 </div>
                 <div class="about-us-images">
                     <div class="image-wrapper">
