more fixes and easter eggs (inc photo overlays)

--- a/index.html
+++ b/index.html
@@ -170,11 +170,16 @@
                     
                 </div>
                 <div class="about-us-images">
-                    <div class="image-wrapper">
-                        <img src="https://placehold.co/400x300/000000/FFFFFF?text=Image+1" alt="Placeholder Image 1">
+                    <div class="image-wrapper" id="yazAndHazImageWrapper" style="cursor: pointer;">
+                        <img src="assets/yazandhazinblue.jpg" alt="Yaz and Haz against a blue background">
+                        <img data-src="assets/graffiti.png" alt="Graffiti overlay" class="easter-egg-overlay graffiti-overlay">
+                        <img data-src="assets/very-funny.png" alt="Funny overlay" class="easter-egg-overlay very-funny-overlay">
+                        <img data-src="assets/sarcastic.png" alt="Sarcastic overlay" class="easter-egg-overlay sarcastic-overlay">
+                        <img data-src="assets/i-know.png" alt="I know overlay" class="easter-egg-overlay i-know-overlay">
                     </div>
-                    <div class="image-wrapper">
-                        <img src="https://placehold.co/400x300/333333/FFFFFF?text=Image+2" alt="Placeholder Image 2">
+                    <div class="image-wrapper" id="secondImageWrapper" style="cursor: pointer;">
+                        <img src="assets/kids-on-beach.jpg" alt="Yaz and Haz as kids on a beach somewhere" class="base-image">
+                        <img data-src="assets/laurel-hardy.jpg" alt="Laurel and Hardy overlay" class="easter-egg-overlay laurel-hardy-overlay">
                     </div>
                 </div>
             </div>
@@ -189,7 +194,7 @@
         </header>
         <main>
             <div class="button-container">
-                <a href="#" class="menu-button" id="telepathyButton">Click here to communicate telepathically with the brothers</a>
+                <a href="#" class="menu-button" id="telepathyButton">Click here to communicate <br>telepathically with the brothers</a>
             </div>
         </main>
         <footer>
