small comment updates

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link href="glitch.css" rel="stylesheet">
 </head>
 <body>
-    <!-- NEW: Password Screen -->
+    <!-- Password Screen -->
     <div id="passwordScreen">
         <form id="passwordForm">
             <!-- The label will be populated by the typewriter effect in JS -->
@@ -151,7 +151,7 @@
     <!-- Black transition overlay -->
     <div id="transitionOverlay" class="transition-overlay"></div>
 
-    <!-- About Us Screen (now independent for 3D transition) -->
+    <!-- About Us Screen (independent for 3D transition) -->
     <div class="screen-wrapper" id="aboutUsScreen">
         <a href="#" class="back-button" id="backToMainMenuFromAbout">&lt; BACK</a>
         <header>
@@ -186,7 +186,7 @@
         </main>
     </div>
 
-    <!-- Make Contact Screen (Now an overlay) -->
+    <!-- Make Contact Screen -->
     <div class="screen-wrapper" id="makeContactScreen">
         <a href="#" class="back-button" id="backToMainMenuFromContact">&lt; BACK</a>
         <header>
@@ -202,10 +202,11 @@
         </footer>
     </div>
 
-    <!-- Telepathy Message Display (NEW) -->
+    <!-- Telepathy Message Display -->
     <div id="telepathyMessage" class="telepathy-message">
         <p>A faint message echoes in your mind: "We hear you, mortal. Seek us in the void."</p><br>
         <p>You will hear from the brothers in the next couple of days.</p>
+        <p>Assuming it's not a bank holiday or something because the void doesn't have access to a calendar.</p>
     </div>
 
     <!-- Link to external JavaScript file -->
