chapter selection pagination

--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
             <div class="scene-selection-grid" id="sceneSelectionGrid">
                 <!-- Chapter videos will be dynamically loaded here by JavaScript -->
             </div>
+            <!-- New container for pagination controls -->
+            <div class="pagination-controls" id="paginationControls"></div>
             <footer>
                 <p class="copyright-text">&copy; 2025 BROTHER BROTHER. ALL RIGHTS RESERVED.</p>
             </footer>
